GERONIMO-5382  Enable the max permsize configuration in geronimo-maven-plugin
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@954351 13f79535-47bb-0310-9956-ffa450edef68